--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
+<h1>My name is <%= %w(Almond Misty Amigo).sample %></h1>
 <div style='border: 3px dashed red'>
     <img src='http://placekitten.com/500/500'>
   </div>
